--- a/PLC-Roomcontrol-Generator/PLC-Roomcontrol-Generator.vcxproj.filters
+++ b/PLC-Roomcontrol-Generator/PLC-Roomcontrol-Generator.vcxproj.filters
@@ -19,4 +19,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="mortLib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="roomcontrolXmlLib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="writeXml.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="xml.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
